--- a/client/pern-todo/src/assets/styles/style.css
+++ b/client/pern-todo/src/assets/styles/style.css
@@ -40,7 +40,7 @@ footer a .icons {
 }
 
 .main-content {
-    text-align: center;
+    text-align:  center;
     text-transform: uppercase;
     scroll-snap-type: y mandatory;
     position: relative;
@@ -94,14 +94,15 @@ h1 {
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items:center;
     background-image: url(https://meowlivia.s3.us-east-2.amazonaws.com/codepen/background/forest.jpg);
 }
 
 .concept-two {
-    display: grid;
-    grid: 100% / repeat(6, 1fr);
-    padding: 5em 15em;
+    display: inline-flex;
+    /* grid:100% repeat(6, 1fr); /* Set to your word length */
+    padding: 1em 2em;
+    height: fit-content;
 
 }
 
@@ -109,19 +110,21 @@ h1 {
     position: relative;
     display: grid;
     place-items: center;
+    height: 50px;
 }
 
 .concept-two h1 {
+    margin: 0;
     color: transparent;
     text-align: 0 1px 1px;
-    -webkit-text-stroke: 2px #fff;
+    -webkit-text-stroke: 2px #efc715;
     text-shadow: none;
     transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .concept-two .hover:hover h1 {
     transform: scale(1.5);
-    color: #fff;
+    color: #fff200;
     -webkit-text-stroke: 2px transparent;
     text-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
