--- a/client/pern-todo/src/assets/styles/style-list.css
+++ b/client/pern-todo/src/assets/styles/style-list.css
@@ -18,38 +18,25 @@ body {
 }
 
 ol {
-  padding-left: 50px;
+  padding-left: 0;
 }
-li {
-  color: #4f4f4f;
-  padding-left: 16px;
-  margin-top: 24px;
-  position: relative;
-  font-size: 16px;
-  line-height: 20px;
 
-  &:before {
-    content: "";
-    display: block;
-    height: 42px;
-    width: 42px;
-    border-radius: 50%;
-    border: 2px solid #ddd;
-    position: absolute; /* yeah, you have to manually position it based on the text size, line height, etc. (in the parent li style). it's not the smarest solution
-    */top: -12px;
-    left: -46px;
-  }
-}
 
 strong {
   color: #292929;
 }
 
-ol.alternating-colors {
-  li:nth-child(odd):before {
-    border-color: #0bad02;
-  }
-  li:nth-child(even):before {
-    border-color: #2378d5;
-  }
+
+.circle-number {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 42px;
+  width: 42px;
+  border-radius: 50%;
+  border: 2px solid #ddd;
+  margin-right: 12px;
+  font-size: 16px;
+  background: #fff;
+  color: #292929;
 }
