--- a/client/pern-todo/src/assets/styles/style-add.css
+++ b/client/pern-todo/src/assets/styles/style-add.css
@@ -25,8 +25,9 @@ input[type="text"] {
   display: flex;
 } /* necessary to give position: relative to parent. */
 input[type="text"] {
-  font: 15px/24px "Lato", Arial, sans-serif;
-  color: #000000;
+  font-size: 20px;
+  font-family: "Sour Gummy", sans-serif;
+  color: #0c0101;
   width: 100%;
   box-sizing: border-box;
   letter-spacing: 1px;
@@ -37,7 +38,7 @@ input[type="text"] {
 .effect-3 {
   border: 0;
   padding: 7px 0;
-  border-bottom: 1px solid #0e0101;
+  border-bottom:none;
 }
 
 
