--- a/client/pern-todo/src/assets/styles/style-list.css
+++ b/client/pern-todo/src/assets/styles/style-list.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
-body {
+.container-list {
   font-family: "Space Mono", monospace;
   display: flex;
   flex-direction: column;
@@ -23,7 +23,7 @@ ol {
 
 
 strong {
-  color: #292929;
+  color: #a39800;
 }
 
 
