--- a/client/pern-todo/src/assets/styles/style.css
+++ b/client/pern-todo/src/assets/styles/style.css
@@ -100,7 +100,7 @@ h1 {
 
 .concept-two {
     display: inline-flex;
-    grid:100% repeat(6, 1fr); /* Set to your word length */
+ /*   grid:100% repeat(6, 1fr); /* Set to your word length */
     padding: 10em 2em;
     padding-bottom: 0;
     height: fit-content;
