--- a/client/pern-todo/src/assets/styles/style.css
+++ b/client/pern-todo/src/assets/styles/style.css
@@ -97,7 +97,7 @@ h1 {
     align-items:center;
    /* background-image: url(https://meowlivia.s3.us-east-2.amazonaws.com/codepen/background/forest.jpg);
 */
-    background-image: url(C:\Users\VICTUS\Documents\Projects\pern_todo\client\pern-todo\src\assets\images\background-table.jpg);
+    background-image: url(https://images.pexels.com/photos/884788/pexels-photo-884788.jpeg);
    }
 
 .concept-two {
